# douyin-downloader

./: README.md  README_SUBTITLE_REMOVER.md  WINDOWS_BUILD.md  index.html  install.sh  package-lock.json  package.json  push-to-github.sh  requirements.txt  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  index.css
src-python/: subtitle_remover.py
src-react/: index.ts
src-react/components/: DownloadWithOptions.tsx  DownloadWithSubtitleRemoval.tsx  SubtitleRemover.tsx
src-react/hooks/: useSubtitleRemover.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/python/: downloader.py  process_video.py
src-tauri/src/: commands.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs  subtitle.rs
src/components/: Layout.tsx
src/pages/: DownloadPage.tsx  HistoryPage.tsx  LocalVideoPage.tsx  SettingsPage.tsx  TasksPage.tsx
src/types/: tauri.ts
src/utils/: tauri.ts
