[package]
name = "douyin-downloader"
version = "1.0.0"
description = "抖音视频下载工具 - AI 去字幕版"
authors = ["Yujianqiao"]
license = "MIT"
repository = "https://github.com/Yujianqiao/douyin-downloader"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
